<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/notiColor"
    android:orientation="vertical"
    android:paddingTop="?android:attr/actionBarSize" >

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context=".MainActivity"
        android:layout_marginBottom="10dp" >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="使用指南："
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card"
            android:text="@string/tutorial"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="关于："
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card"
            android:text="@string/app_version"
            android:clickable="true"
            android:textSize="16sp"
            android:onClick="onClickEasterEgg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/github_site"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:background="@drawable/shape_card"
            android:drawableLeft="@drawable/ic_link"
            android:text="@string/github_site_url"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textSize="10sp"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"/>


    </LinearLayout>

</ScrollView>